# peakrdl_importlib_testcase

./: .gitignore  requirements.txt  runme.py  runme.sh
package/: pyproject.toml
package/src/my_amazing_exporter/: my_amazing_exporter.py
